--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-storage.js"></script>
   <script src="flutter_bootstrap.js" async></script>
   <script type="module">
     // Import the functions you need from the SDKs you need
@@ -41,7 +42,7 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
   
     // Your web app's Firebase configuration
-    const firebaseConfig = {
+    var firebaseConfig = {
       apiKey: "AIzaSyDH2cV_lTt9MbOqg8UnI2EtvEgg9h8oMh0",
       authDomain: "housedecoration-2024.firebaseapp.com",
       projectId: "housedecoration-2024",
